--- a/nginx/gyft.metakgp.org
+++ b/nginx/gyft.metakgp.org
@@ -1,10 +1,10 @@
 upstream gyft_server {
-    server web:7950;
+    server python_gyft:7950;
 }
 
 server {
     listen 80;
-    server_name gyft.example.com;
+    server_name gyft.metakgp.org;
 
     location / {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
