--- a/nginx/wiki.metakgp.org
+++ b/nginx/wiki.metakgp.org
@@ -16,7 +16,7 @@ server {
 		location ~ \.php$ {
 			try_files $uri $uri/ =404; # Don't let php execute non-existent php files
 			include /etc/nginx/fastcgi_params;
-			fastcgi_pass php-docker:9000;
+			fastcgi_pass php-mediawiki:9000;
                         fastcgi_index index.php;
                         fastcgi_param SCRIPT_FILENAME $document_root/$fastcgi_script_name;
 		}
@@ -24,10 +24,10 @@ server {
 
 	location ~ ^/google557cb96b33ddc6b5\.html$ {}
 	location ~ ^/robots\.txt$ {}
-	
+
 	location /images {
 		# Separate location for images/ so .php execution won't apply
-		
+
 		location ~ ^/images/thumb/(archive/)?[0-9a-f]/[0-9a-f][0-9a-f]/([^/]+)/([0-9]+)px-.*$ {
 			# Thumbnail handler for MediaWiki
 			# This location only matches on a thumbnail's url
@@ -43,46 +43,46 @@ server {
 	location ^~ /scripts/ {
 		return 404;
 	}
-	
+
 	# Deny access to folders MediaWiki has a .htaccess deny in
 	location /cache       { deny all; }
 	location /languages   { deny all; }
 	location /maintenance { deny all; }
 	location /serialized  { deny all; }
-	
+
 
 	# Just in case, hide .svn and .git too
 	location ~ /.(svn|git)(/|$) { deny all; }
-	
+
 	# Hide any .htaccess files
 	location ~ /.ht { deny all; }
-	
+
 	# Uncomment the following code if you wish to hide the installer/updater
 	## Deny access to the installer
 	# location /mw-config { deny all; }
-	
+
 	# Handling for the article path
 	location /w {
 		include /etc/nginx/fastcgi_params;
 		# article path should always be passed to index.php
 		fastcgi_param SCRIPT_FILENAME	$document_root/index.php;
-		fastcgi_pass  php-docker:9000;
+		fastcgi_pass  php-mediawiki:9000;
 	}
-	
+
 	# Thumbnail 404 handler, only called by try_files when a thumbnail does not exist
 	location @thumb {
 		# Do a rewrite here so that thumb.php gets the correct arguments
 		rewrite ^/images/thumb/[0-9a-f]/[0-9a-f][0-9a-f]/([^/]+)/([0-9]+)px-.*$ /thumb.php?f=$1&width=$2;
 		rewrite ^/images/thumb/archive/[0-9a-f]/[0-9a-f][0-9a-f]/([^/]+)/([0-9]+)px-.*$ /thumb.php?f=$1&width=$2&archived=1;
-		
+
 		# Run the thumb.php script
 		include /etc/nginx/fastcgi_params;
 		fastcgi_param SCRIPT_FILENAME	$document_root/thumb.php;
-		fastcgi_pass  php-docker:9000;
+		fastcgi_pass  php-mediawiki:9000;
 	}
 	# Only for nginx-naxsi used with nginx-naxsi-ui : process denied requests
 	#location /RequestDenied {
-	#	proxy_pass http://127.0.0.1:8080;    
+	#	proxy_pass http://127.0.0.1:8080;
 	#}
 
 	#error_page 404 /404.html;
@@ -103,7 +103,7 @@ server {
 	#	# With php5-cgi alone:
 	#	fastcgi_pass 127.0.0.1:9000;
 	#	# With php5-fpm:
-	#	fastcgi_pass php-docker:/var/run/php5-fpm.sock;
+	#	fastcgi_pass php-mediawiki:/var/run/php5-fpm.sock;
 	#	fastcgi_index index.php;
 	#	include fastcgi_params;
 	#}
@@ -124,7 +124,7 @@ server {
 	set_real_ip_from 141.101.64.0/18;
 	set_real_ip_from 108.162.192.0/18;
 	set_real_ip_from 190.93.240.0/20;
-	set_real_ip_from 188.114.96.0/20; 
+	set_real_ip_from 188.114.96.0/20;
 	set_real_ip_from 197.234.240.0/22;
 	set_real_ip_from 198.41.128.0/17;
 	set_real_ip_from 162.158.0.0/15;
